--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "react-uuid": "^2.0.0"
+    "react-uuid": "^2.0.0",
+    "vue-runtime-helpers": "^1.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
